[gd_scene load_steps=5 format=3 uid="uid://0r51c4hb1hn4"]

[ext_resource type="Script" path="res://scenes/game/entities/characters/warrior/warrior.gd" id="1_2fhex"]
[ext_resource type="SpriteFrames" uid="uid://b35beudoh2wue" path="res://scenes/game/entities/characters/warrior/warrior_animations.tres" id="1_udmrn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1fntu"]
radius = 13.0
height = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wibek"]
size = Vector2(241, 51)

[node name="Warrior" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_2fhex")

[node name="Label" type="Label" parent="."]
offset_left = -22.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -11.0
text = "Label"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_udmrn")
animation = &"attack"
frame = 11
frame_progress = 1.0
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_1fntu")

[node name="Zones" type="Node2D" parent="."]

[node name="WatchZone" type="Area2D" parent="Zones"]
position = Vector2(0, 8)
collision_layer = 8
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/WatchZone"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_wibek")
debug_color = Color(0.670588, 0.509804, 0, 0.419608)

[node name="AttackZone" type="Area2D" parent="Zones"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Zones/AttackZone"]
polygon = PackedVector2Array(7, 27, 21, 25, 39, 13, 40, -7, 31, -20, 16, -28, -1, -29, -12, -29, -1, -14, 6, -2, 6, 17, -1, 25)

[connection signal="body_entered" from="Zones/WatchZone" to="." method="_on_watch_zone_body_entered"]
[connection signal="body_exited" from="Zones/WatchZone" to="." method="_on_watch_zone_body_exited"]
